@@ -9,7 +9,7 @@ var comms_impl;
 
 if ( isNode )
 {
-    comms_impl = common._nodeRequire( './node/comms' );
+    comms_impl = module.require( './node/comms' );
 }
 else
 {
