@@ -71,5 +71,3 @@ exports.Options =
 exports._ifacever_pattern = /^(([a-z][a-z0-9]*)(\.[a-z][a-z0-9]*)*):(([0-9]+)\.([0-9]+))$/;
 /** @ignore */
 exports._isNode = ( typeof window === 'undefined' ) && require( 'detect-node' );
-/** @ignore */
-exports._nodeRequire = exports._isNode && require;
