@@ -1,5 +1,6 @@
 
 === (next) ===
+FIXED: not to show webpack warning on node require
 FIXED: cosmetic doc & code fixes
 
 === 1.2.0 (2017-08-06) ===
